# fastapi-sentry

./: .env  .env.sample  Readme.md  pyproject.toml
app/: main.py
